--- a/packages/security-client/package.json
+++ b/packages/security-client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "security-client",
+  "name": "@tshio/security-client",
   "version": "0.0.0",
   "private": true,
   "description": "",
