--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
     }
   },
   "include": [
-    "./src/**/*.ts"
+    "./packages/*/src/**/*.ts"
   ],
   "exclude": ["node_modules", "build/**"]
 }
