--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "module": "CommonJS",
     "target": "ES2019",
+    "types": ["node", "mocha"],
     "sourceMap": true,
     "declaration": true,
     "declarationMap": true,
