--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "examples/*"
   ],
   "scripts": {
-    "docs": "doctoc --title '**Table of content**' README.md",
+    "docs": "typedoc --options typedoc.js",
     "bootstrap": "./node_modules/.bin/lerna clean -y && ./node_modules/.bin/lerna bootstrap --hoist",
     "build": "./node_modules/.bin/lerna run build",
     "unit": "./node_modules/.bin/lerna run units",
@@ -29,7 +29,6 @@
     "@typescript-eslint/eslint-plugin": "2.27.0",
     "@typescript-eslint/parser": "2.27.0",
     "chai": "4.2.0",
-    "doctoc": "~1.4.0",
     "eslint": "6.8.0",
     "eslint-config-airbnb-typescript": "7.2.0",
     "eslint-config-prettier": "6.10.1",
@@ -42,6 +41,8 @@
     "rimraf": "3.0.2",
     "ts-node": "9.0.0",
     "tsconfig-paths": "~3.9.0",
+    "typedoc": "^0.19.1",
+    "typedoc-plugin-markdown": "^2.4.2",
     "typescript": "4.0.2"
   },
   "dependencies": {
