--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "module": "CommonJS",
-    "target": "esnext",
+    "target": "ES6",
     "types": ["node", "mocha"],
     "sourceMap": true,
     "declaration": true,
