--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint-plugin-unicorn": "18.0.1",
     "lerna": "3.22.1",
     "mocha": "8.1.3",
+    "@types/mocha": "^8.0.3",
     "prettier": "2.0.4",
     "rimraf": "3.0.2",
     "ts-node": "9.0.0",
