--- a/packages/scheduler-client/package.json
+++ b/packages/scheduler-client/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "main": "index.js",
   "dependencies": {
-    "perron": "0.11.4"
+    "perron": "0.11.4",
+    "qs": "6.9.4"
   }
 }
