--- a/packages/security-client/package.json
+++ b/packages/security-client/package.json
@@ -20,14 +20,15 @@
     "integration": "mocha dist/test/**/*.spec.js --exit"
   },
   "dependencies": {
-    "perron": "0.11.4"
+    "perron": "0.11.4",
+    "qs": "6.9.4"
   },
   "devDependencies": {
-    "typedoc": "^0.19.1",
-    "typedoc-plugin-markdown": "^2.4.2",
     "@types/chai": "^4.2.12",
     "@types/mocha": "^8.0.3",
     "chai": "^4.2.0",
-    "mocha": "^8.1.3"
+    "mocha": "^8.1.3",
+    "typedoc": "^0.19.1",
+    "typedoc-plugin-markdown": "^2.4.2"
   }
 }
