--- a/packages/security-client/package.json
+++ b/packages/security-client/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@tshio/security-client",
-  "version": "0.0.1",
-  "private": true,
+  "version": "0.0.0",
+  "private": false,
   "description": "",
   "author": "tsh.io",
   "license": "MIT",
