--- a/packages/security-client/package.json
+++ b/packages/security-client/package.json
@@ -33,5 +33,6 @@
     "mocha": "^8.1.3",
     "typedoc": "^0.19.1",
     "typedoc-plugin-markdown": "^2.4.2"
-  }
+  },
+  "gitHead": "b82cd844ce35d701920bddaf2110a542ff5c0fab"
 }
