--- a/packages/security-client/package.json
+++ b/packages/security-client/package.json
@@ -11,7 +11,7 @@
     "dist"
   ],
   "publishConfig": {
-    "access": "restricted"
+    "access": "public"
   },
   "scripts": {
     "docs": "typedoc --options typedoc.js",
