--- a/packages/security-client/package.json
+++ b/packages/security-client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tshio/security-client",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "private": false,
   "description": "",
   "author": "tsh.io",
@@ -21,8 +21,7 @@
     "compile": "tsc -p tsconfig.build.json",
     "prepublishOnly": "npm run build",
     "test": "npm run build",
-    "integration": "mocha dist/test/**/*.spec.js --exit",
-    "rimraf": "./node_modules/rimraf/bin.js"
+    "integration": "mocha dist/test/**/*.spec.js --exit"
   },
   "dependencies": {
     "perron": "0.11.4",
@@ -36,5 +35,5 @@
     "typedoc": "^0.19.1",
     "typedoc-plugin-markdown": "^2.4.2"
   },
-  "gitHead": "8e95838468f07921e3b735fb77f3616a39ee30e3"
+  "gitHead": "907448a1927f86abca38ec294b0e25e66c8f9716"
 }
