--- a/packages/security-client/package.json
+++ b/packages/security-client/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@tshio/security-client",
-  "version": "0.0.9",
+  "version": "0.0.10",
   "repository": {
     "type": "git",
     "url": "https://github.com/TheSoftwareHouse/rad-modules-tools.git"
   },
   "private": false,
-  "description": "",
+  "description": "RAD Security Client",
   "author": "tsh.io",
   "license": "MIT",
   "main": "dist/index.js",
