--- a/packages/security-client/package.json
+++ b/packages/security-client/package.json
@@ -21,6 +21,7 @@
     "docs": "typedoc --options typedoc.js",
     "build": "npm run clean && npm run compile && npm run generate-types",
     "generate-types": "tsc --declaration ./src/**/*.ts --outDir ./dist",
+    "generate-api-doc": "jsdoc2md --template README.hbs --files ./dist/**/* > README.md",
     "clean": "rimraf -rf ./dist",
     "compile": "tsc -p tsconfig.build.json",
     "prepublishOnly": "npm run build",
@@ -37,7 +38,8 @@
     "chai": "^4.2.0",
     "mocha": "^8.1.3",
     "typedoc": "^0.19.1",
-    "typedoc-plugin-markdown": "^2.4.2"
+    "typedoc-plugin-markdown": "^2.4.2",
+    "jsdoc-to-markdown": "^6.0.1"
   },
   "gitHead": "e0ccfaa5a40c9800fa23d0111088c442bd18ec89"
 }
