Add license and TSH logo to README.md

--- a/packages/security-client/package.json
+++ b/packages/security-client/package.json
@@ -19,9 +19,10 @@
   },
   "scripts": {
     "docs": "typedoc --options typedoc.js",
-    "build": "npm run clean && npm run compile && npm run generate-types",
+    "build": "npm run clean && npm run compile && npm run generate-types && npm run copy-license-file",
     "generate-types": "tsc --declaration ./src/**/*.ts --outDir ./dist",
     "generate-api-doc": "jsdoc2md --template README.hbs --files ./dist/**/* > README.md",
+    "copy-license-file": "cp ./LICENSE ./dist/",
     "clean": "rimraf -rf ./dist",
     "compile": "tsc -p tsconfig.build.json",
     "prepublishOnly": "npm run build",
