--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ node_js:
   - 12
 
 before_script:
+  - echo "//registry.npmjs.org/:_authToken=\${NPM_TOKEN}" > .npmrc
   - npm install
   - npm run bootstrap
   - npm run build
@@ -11,3 +12,11 @@ before_script:
 script:
   - npm run lint
   - npm run integration
+
+deploy:
+  provider: script
+  script: npx lerna publish -y from-git
+  skip_cleanup: true
+  on:
+    tags: true
+    branch: master
