--- a/.travis.yml
+++ b/.travis.yml
@@ -16,10 +16,13 @@ before_deploy:
   - echo "//registry.npmjs.org/:_authToken=\${NPM_TOKEN}" >> $HOME/.npmrc 2> /dev/null
   - git remote add pub https://github.com/TheSoftwareHouse/rad-modules-tools.git -f
   - git checkout master
+  - npm install
+  - npm run bootstrap
+  - npm run build
 
 deploy:
   provider: script
-  script: npx lerna publish --yes
+  script: npm run publish
   skip_cleanup: true
   on:
     tags: false
