--- a/packages/security-client/package.json
+++ b/packages/security-client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tshio/security-client",
-  "version": "0.0.14",
+  "version": "0.0.17",
   "repository": {
     "type": "git",
     "url": "https://github.com/TheSoftwareHouse/rad-modules-tools.git"
@@ -37,10 +37,10 @@
     "@types/chai": "^4.2.12",
     "@types/mocha": "^8.0.3",
     "chai": "^4.2.0",
+    "jsdoc-to-markdown": "^6.0.1",
     "mocha": "^8.1.3",
     "typedoc": "^0.19.1",
-    "typedoc-plugin-markdown": "^2.4.2",
-    "jsdoc-to-markdown": "^6.0.1"
+    "typedoc-plugin-markdown": "^2.4.2"
   },
   "gitHead": "e0ccfaa5a40c9800fa23d0111088c442bd18ec89"
 }
