Add RAD Scheduler Client

--- a/lerna.json
+++ b/lerna.json
@@ -15,6 +15,7 @@
   ],
   "version": "independent",
   "workspaces": [
-    "packages/security-client"
+    "packages/security-client",
+    "packages/scheduler-client"
   ]
 }
