Add getJobs method

--- a/lerna.json
+++ b/lerna.json
@@ -11,7 +11,8 @@
     }
   },
   "packages": [
-    "packages/security-client"
+    "packages/security-client",
+    "packages/scheduler-client"
   ],
   "version": "independent",
   "workspaces": [
