--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "typescript": "4.0.2"
   },
   "dependencies": {
-    "@tshio/security-client": "file:packages/security-client"
+    "@tshio/security-client": "file:packages/security-client",
+    "@tshio/scheduler-client": "file:packages/scheduler-client"
   }
 }
