--- a/packages/scheduler-client/package.json
+++ b/packages/scheduler-client/package.json
@@ -40,7 +40,8 @@
     "jsdoc-to-markdown": "^6.0.1",
     "mocha": "^8.1.3",
     "typedoc": "^0.19.1",
-    "typedoc-plugin-markdown": "^2.4.2"
+    "typedoc-plugin-markdown": "^2.4.2",
+    "uuid": "3.3.3"
   },
   "gitHead": "e0ccfaa5a40c9800fa23d0111088c442bd18ec89"
 }
