--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,10 +21,10 @@ services:
   scheduler:
     image: tshio/scheduler:latest
     working_dir: /app/build/services/scheduler
-    command: api
+    command: "api"
     hostname: scheduler
     ports:
-      - "50053:50050"
+      - 50070:50050
     depends_on:
       - postgres
       - redis
