--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   },
   "dependencies": {
     "@tshio/security-client": "file:packages/security-client",
-    "@tshio/scheduler-client": "file:packages/scheduler-client"
+    "@tshio/scheduler-client": "file:packages/scheduler-client",
+    "@tshio/pdf-client": "file:packages/pdf-client"
   }
 }
