--- a/packages/pdf-client/package.json
+++ b/packages/pdf-client/package.json
@@ -1,13 +1,46 @@
 {
   "name": "@tshio/pdf-client",
-  "version": "0.0.0",
-  "private": true,
-  "description": "",
-  "author": "",
+  "version": "0.0.1",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/TheSoftwareHouse/rad-modules-tools.git"
+  },
+  "private": false,
+  "description": "RAD PDF Client",
+  "author": "tsh.io",
   "license": "MIT",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
+  "publishConfig": {
+    "access": "public"
+  },
+  "scripts": {
+    "docs": "typedoc --options typedoc.js",
+    "build": "npm run clean && npm run compile && npm run generate-types && npm run copy-license-file",
+    "generate-types": "tsc --declaration ./src/**/*.ts --outDir ./dist",
+    "generate-api-doc": "jsdoc2md --template README.hbs --files ./dist/**/* > README.md",
+    "copy-license-file": "cp ./LICENSE ./dist/",
+    "clean": "rimraf -rf ./dist",
+    "compile": "tsc -p tsconfig.build.json",
+    "prepublishOnly": "npm run build",
+    "test": "npm run build",
+    "integration": "mocha dist/test/**/*.spec.js --exit"
+  },
   "dependencies": {
     "perron": "0.11.4",
     "qs": "6.9.4"
+  },
+  "devDependencies": {
+    "@types/chai": "^4.2.12",
+    "@types/mocha": "^8.0.3",
+    "chai": "^4.2.0",
+    "jsdoc-to-markdown": "^6.0.1",
+    "mocha": "^8.1.3",
+    "typedoc": "^0.19.1",
+    "typedoc-plugin-markdown": "^2.4.2",
+    "uuid": "3.3.3"
   }
 }
