--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,18 @@ services:
     networks:
       - app
 
+  notifications:
+    image: tshio/notifications:latest
+    command: "api"
+    ports:
+      - 50090:50050
+      - 30090:30050
+    hostname: notifications
+    depends_on:
+      - postgres
+    networks:
+      - app
+
   pdf:
     image: tshio/pdf:latest
     command: "api"
