--- a/lerna.json
+++ b/lerna.json
@@ -13,12 +13,14 @@
   "packages": [
     "packages/security-client",
     "packages/scheduler-client",
-    "packages/pdf-client"
+    "packages/pdf-client",
+    "packages/notifications-client"
   ],
   "version": "independent",
   "workspaces": [
     "packages/security-client",
     "packages/scheduler-client",
-    "packages/pdf-client"
+    "packages/pdf-client",
+    "packages/notifications-client"
   ]
 }
